[gd_scene load_steps=5 format=3 uid="uid://c3dndr4w4euk5"]

[ext_resource type="Script" uid="uid://bgnbj7ltjofhv" path="res://components/escape_menu/game/game_escape_menu.gd" id="1_a5j54"]
[ext_resource type="Shader" uid="uid://dcoepyfyau57s" path="res://assets/shaders/blur.gdshader" id="2_0pl3q"]
[ext_resource type="StyleBox" uid="uid://nvug1cqa5843" path="res://themes/style_box_flat.tres" id="3_53op5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fycqk"]
shader = ExtResource("2_0pl3q")
shader_parameter/amount = 1.0

[node name="GameEscapeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5j54")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fycqk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/separation = 0

[node name="Version" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "v0.0.0.0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Renderer" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "renderer"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Latency" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0ms"
horizontal_alignment = 2
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -50.5
offset_right = 47.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_53op5")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Controls" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="Logout" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Logout"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="BottomRightContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="PacketsContainer" type="VBoxContainer" parent="BottomRightContainer"]
layout_mode = 2

[node name="PacketsLostContainer" type="HBoxContainer" parent="BottomRightContainer/PacketsContainer"]
layout_mode = 2
alignment = 2

[node name="PacketsLost" type="Label" parent="BottomRightContainer/PacketsContainer/PacketsLostContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(100, 0, 0, 1)
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label" type="Label" parent="BottomRightContainer/PacketsContainer/PacketsLostContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(100, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "packets lost"

[node name="PacketsSentContainer" type="HBoxContainer" parent="BottomRightContainer/PacketsContainer"]
layout_mode = 2
alignment = 2

[node name="PacketsSent" type="Label" parent="BottomRightContainer/PacketsContainer/PacketsSentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label" type="Label" parent="BottomRightContainer/PacketsContainer/PacketsSentContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(100, 100, 0, 1)
theme_override_font_sizes/font_size = 12
text = "packets sent"

[node name="PacketsReceivedContainer" type="HBoxContainer" parent="BottomRightContainer/PacketsContainer"]
layout_mode = 2
alignment = 2

[node name="PacketsReceived" type="Label" parent="BottomRightContainer/PacketsContainer/PacketsReceivedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label" type="Label" parent="BottomRightContainer/PacketsContainer/PacketsReceivedContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 12
text = "packets received"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
